# CS210-CW

./: CMakeLists.txt  README.md  busscan.c  offsetcalc  offsetcalc.c
gy9250_i2c/: CMakeLists.txt  gy9250_i2c.c
qmc5883l_i2c/: CMakeLists.txt
